# bentoml_university_score

./: .gitignore  Makefile  README.md  bentofile.yaml  pyproject.toml  requirements.txt
src/: jwt_middleware.py  service.py
src/data/: load_data.py  prepare_data.py
src/model/: train_model.py
tests/: __init__.py  test_request.py  test_service.py
